--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 env:
+  - VERSION=19.15.3.6
   - VERSION=1.1.54276
 
 language: python
 python:
   - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
 cache: pip
 services:
   - docker
